[package]
name = "gsheet"
version = "0.1.0"
edition = "2024"

[dependencies]
google-sheets4 = "5.0.5+20240621"
serde = "1"
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "3.0", features = ["derive"] }
anyhow = "1.0"
google-drive3 = "5.0.5+20240618"
prettytable-rs = "0.10"